# rwasim10

./: (79) WhatsApp.html  Assignment 4 Rgular Expression.py  Assignment_1.ipynb  Customer_Support.py  DL Admission Assignment 3.ipynb  Deep LearningMNIST_Assignment.ipynb  Final_Project_Speech_to_text.py  README.md  Rohan_Deep_learning_Assignment (1).ipynb  Rohan_Wasim_Assignment_3_19_8_2023.ipynb  Untitled8.ipynb  Week_2_Assignment.ipynb  class4_string_methods.ipynb  requirements.txt
Rohaan_Project_ML/: Kong.rar  compose.yml
Rohaan_Project_ML/Back_end/: Dockerfile.dev  pyproject.toml
Rohaan_Project_ML/Back_end/back_end/: main.py
Rohaan_Project_ML/Front_end/: Dockerfile.dev  pyproject.toml
Rohaan_Project_ML/Front_end/front_end/: main.py
Rohaan_Project_ML/Front_end/tests/: pytest.py
